# src/main/java/com/myproject/registerApi/controller/ActivityController.java
@@ -1,7 +1,49 @@
 package com.myproject.registerApi.controller;
 
+import com.myproject.registerApi.model.ActivityDTO;
+import com.myproject.registerApi.service.ActivityService;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
 
 @RestController
 public class ActivityController implements ActivityApi {
+
+    //TODO fix responses codes
+    private  final ActivityService activityService;
+
+    public ActivityController(ActivityService activityService) {
+        this.activityService = activityService;
+    }
+
+    @Override
+    public ResponseEntity<ActivityDTO> saveActivity(ActivityDTO activityDTO) {
+        ActivityDTO activity = activityService.saveActivity(activityDTO);
+        return ResponseEntity.ok().body(activity);
+    }
+
+    @Override
+    public ResponseEntity<ActivityDTO> getActivityByName(String name) {
+        ActivityDTO activity = activityService.getActivity(name);
+        return ResponseEntity.ok().body(activity);
+    }
+
+    @Override
+    public ResponseEntity<List<ActivityDTO>> getAllActivities() {
+        List<ActivityDTO> activities = activityService.getAllActivities();
+        return ResponseEntity.ok().body(activities);
+    }
+
+    @Override
+    public ResponseEntity<Void> updateActivityByName(String oldName, ActivityDTO activityDTO) {
+        activityService.updateActivity(oldName, activityDTO.getName());
+        return ResponseEntity.ok().build();
+    }
+
+    @Override
+    public ResponseEntity<Void> deleteActivityByName(String name) {
+        activityService.deleteActivity(name);
+        return ResponseEntity.ok().build();
+    }
 }
