# src/main/resources/swagger/registerApi.yml
@@ -99,18 +99,29 @@ paths:
             application/json:
               schema:
                 $ref: 'activitySchemas.yml#/components/schemas/ActivityDTO'
-  /activity/{id}:
     get:
-      summary: Get Activity By Id
-      operationId: getActivityById
+      summary: Get All Activities
+      operationId: getAllActivities
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: 'activitySchemas.yml#/components/schemas/ActivityDTO'
+  /activity/{name}:
+    get:
+      summary: Get Activity By Name
+      operationId: getActivityByName
       parameters:
-        - name: id
+        - name: name
           in: path
-          description: Unique Id of an Activity
+          description: Unique name of an Activity
           required: true
           schema:
             type: string
-            format: uuid
       responses:
         200:
           description: OK
@@ -118,6 +129,39 @@ paths:
             application/json:
               schema:
                 $ref: 'activitySchemas.yml#/components/schemas/ActivityDTO'
+    patch:
+      summary: Updates name of activity
+      operationId: updateActivityByName
+      parameters:
+        - name: name
+          in: path
+          description: name of activity
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: 'activitySchemas.yml#/components/schemas/ActivityDTO'
+      responses:
+        200:
+          description: OK
+
+    delete:
+      summary: Deletes activity by name
+      operationId: deleteActivityByName
+      parameters:
+        - name: name
+          in: path
+          description: name of activity
+          required: true
+          schema:
+            type: string
+      responses:
+        201:
+          description: OK
   /parent:
     post:
       summary: Save Parent
